QODBC: Preserve the whole value when using HighPrecision

Some ODBC drivers do not properly handle SQL_NO_DATA and therefore
decimal values returned with HighPrecision are cut off because the
decimal point is not taken into account.

Fixes: QTBUG-73286
Change-Id: I905c947b4d0266a3245d5735300300ca00f77480
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>
(cherry picked from commit c2657f9762e01abd65ac991ba31e3ca085d9540c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>